--- a/Star_DataAnalysis.html
+++ b/Star_DataAnalysis.html
@@ -276,10 +276,10 @@ $(document).ready(function () {
   <a href="Star_DataAnalysis.html">Stars Dataset</a>
 </li>
 <li>
-  <a href="about.html">Diamonds Dataset</a>
+  <a href="Diamonds_dataset.html">Diamonds Dataset</a>
 </li>
 <li>
-  <a href="about.html">Cars93 Dataset</a>
+  <a href="cars93_dataset.html">Cars93 Dataset</a>
 </li>
 <li>
   <a href="about.html">Titanic Analysis</a>
