--- a/about.html
+++ b/about.html
@@ -10,10 +10,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Murtaza Badshah" />
 
 
-<title>Cars 93 Analysis</title>
+<title>about</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -276,10 +275,10 @@ $(document).ready(function () {
   <a href="Star_DataAnalysis.html">Stars Dataset</a>
 </li>
 <li>
-  <a href="about.html">Diamonds Dataset</a>
+  <a href="Diamonds_dataset.html">Diamonds Dataset</a>
 </li>
 <li>
-  <a href="about.html">Cars93 Dataset</a>
+  <a href="cars93_dataset.html">Cars93 Dataset</a>
 </li>
 <li>
   <a href="about.html">Titanic Analysis</a>
@@ -296,75 +295,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Cars 93 Analysis</h1>
-<h4 class="author">Murtaza Badshah</h4>
-<h4 class="date">1/22/2020</h4>
+<h1 class="title toc-ignore">about</h1>
 
 </div>
 
 
-<div id="loading-packages" class="section level3">
-<h3>Loading packages</h3>
-<pre class="r"><code>library(MASS)
-library(dplyr)</code></pre>
-<pre><code>## 
-## Attaching package: &#39;dplyr&#39;</code></pre>
-<pre><code>## The following object is masked from &#39;package:MASS&#39;:
-## 
-##     select</code></pre>
-<pre><code>## The following objects are masked from &#39;package:stats&#39;:
-## 
-##     filter, lag</code></pre>
-<pre><code>## The following objects are masked from &#39;package:base&#39;:
-## 
-##     intersect, setdiff, setequal, union</code></pre>
-<pre class="r"><code>library(tidyr)
-library(ggplot2)
-library(knitr)
-opts_chunk$set(tidy.opts=list(width.cutoff=60),tidy=TRUE)</code></pre>
-</div>
-<div id="problem-1.-for-this-problem-well-use-the-cars93-dataset-from-the-mass-package.-i-wrote-down-two-interesting-questions-that-you-could-answer-with-cars93-dataset." class="section level3">
-<h3>Problem 1. For this problem we’ll use the <code>Cars93</code> dataset from the <code>MASS</code> package. I Wrote down two interesting questions that you could answer with <code>Cars93</code> dataset.</h3>
-<div id="a-question-1-what-is-the-correlation-between-the-mrpprice-of-the-car-vs-the-average-mpg" class="section level5">
-<h5>(a) Question 1: What is the correlation between the MRP(Price) of the car VS the average mpg?</h5>
-<blockquote>
-<p>In order to answer this question we will have to perform some data wrangling. My idea is to take the two MPG variables(MPG.city &amp; MPG.highway) add them and divide by two to get the average MPG for each car.I will save the newly created variable to a new data frame called avgmpg.</p>
-</blockquote>
-<pre class="r"><code>avgmpg &lt;- Cars93%&gt;%
-  mutate(MPG.average = (MPG.city+MPG.highway)/2)</code></pre>
-<blockquote>
-<p>Now I will try to verify if there is a correlation between the price and the average miles per gallon.</p>
-</blockquote>
-<pre class="r"><code>avgmpg%&gt;%
-  ggplot(aes(MPG.average, Price*1000))+
-  geom_point()+
-  #color = Manufacturer, size = Price))+
-  #&quot;I had built the graph in this style initially 
-  #but the results did not actually inform me of anything.&quot;
-  geom_smooth(method = lm, se = FALSE)+
-  #geom_text(aes(label = Manufacturer), check_overlap = TRUE)+
-  geom_label(aes(label = Manufacturer, fill = Origin),
-             colour = &quot;white&quot;, fontface = &quot;bold&quot;,)+
-  labs(title = &quot;Price VS Miles per gallon&quot;, 
-       x = &quot;Average miles per gallon&quot;, y = &quot;Price of car&quot;)</code></pre>
-<p><img src="cars93_dataset_files/figure-html/unnamed-chunk-3-1.png" width="1344" /></p>
-<blockquote>
-<p>To my surprise, after creating the plot we see a negative correlation between the Average miles per gallon and the price of the car. It seems like most of the expensive cars that are made in USA have very poor mileage compared to the non-USA brands.  ##### (b) Question 2: How safe are the cars in the data set?</p>
-</blockquote>
-<pre class="r"><code>Cars93%&gt;%
-  ggplot(aes(AirBags))+
-  geom_bar()+
-  geom_text(stat=&#39;count&#39;, 
-            aes(label=..count..), 
-            vjust=-1)+
-  labs(title = &quot;Cars with Safety features&quot;, 
-       y = &quot;Number of Cars&quot;, 
-       x = &quot;Type of Airbags installed.&quot;)</code></pre>
-<p><img src="cars93_dataset_files/figure-html/unnamed-chunk-4-1.png" width="672" /></p>
-<blockquote>
-<p>After the review of the Air bags in the Cars from 1993 we can see that almost 36.6% of cars did not even have any safety features. Which is not true for this day due to the safety standards that every vehicle must adhere to.</p>
-</blockquote>
-</div>
+<div id="tba" class="section level1">
+<h1>TBA</h1>
 </div>
 
 
